[gd_scene load_steps=4 format=3 uid="uid://pbgjlbdfkrum"]

[ext_resource type="Script" uid="uid://dv1w8qbjgt1hb" path="res://scenes/menus/inventory/equipment_slot.gd" id="1_rwfs4"]

[sub_resource type="Gradient" id="Gradient_67mkh"]
colors = PackedColorArray(0, 0, 0, 1, 0.47137535, 0.4713753, 0.4713753, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rwfs4"]
gradient = SubResource("Gradient_67mkh")
width = 40
height = 40
fill = 2
fill_from = Vector2(0.5, 0.5)

[node name="EquipmentSlot" type="Button"]
custom_minimum_size = Vector2(40, 40)
script = ExtResource("1_rwfs4")

[node name="TextureRect_BG" type="TextureRect" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = SubResource("GradientTexture2D_rwfs4")

[node name="TextureRect_FG" type="TextureRect" parent="TextureRect_BG"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="lblSlotName" type="Label" parent="."]
layout_mode = 0
offset_left = -21.0
offset_top = -24.0
offset_right = 59.0
offset_bottom = -1.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.85)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[node name="PopupMenu" type="PopupMenu" parent="."]
oversampling_override = 1.0
item_count = 2
item_0/text = "Unequip"
item_0/id = 0
item_1/text = "Drop"
item_1/id = 1
